Fixed Tan's bad Row usage and spacing

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -49,8 +49,6 @@ a small {
 }
 
 .wrapper {
-  width:1100px;
-  margin:0 auto;
   display: block;
 }
 
